fixed the flickering issue

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -86,11 +86,12 @@ html, body {
     align-items: center;
     justify-content: center;
 
-    img {
+    div {
       max-width: 100%;
       display: block;
       margin: 0 auto;
       max-height: 100%;
+      backface-visibility: hidden;
     }
   }
   .front {
